0029969: Modeling Algorithms - BRepPrimAPI_MakeHalfSpace::Shape() returns NULL shape while reporting IsDone()